First version of sticky header on mobile and small fix for menu's background issue.

--- a/wp-content/themes/evolve-child/assets/scss/components/_header.scss
+++ b/wp-content/themes/evolve-child/assets/scss/components/_header.scss
@@ -1,4 +1,8 @@
+@use "../base/breakpoints" as breakpoints;
+
 .header-v2 {
+  position: fixed;
+  z-index: 1000;
 
   .action-icon {
     font-size: 32px;
@@ -23,5 +27,9 @@
     .textwidget p {
       margin-bottom: 0;
     }
+  }
+
+  @media (min-width: breakpoints.$md-breakpoint) {  
+    position: initial;
   }
 }
