--- a/wp-content/themes/evolve-child/assets/scss/components/_menu.scss
+++ b/wp-content/themes/evolve-child/assets/scss/components/_menu.scss
@@ -15,10 +15,11 @@ $side-menu-width: 280px;
 .side-menu {
   position: fixed;
   top: 0;
-  height: 100%;
+  height: 110%;
   width: $side-menu-width;
   margin-left: -$side-menu-width;
   transition: 0.5s;
+  overflow: scroll;
   z-index: 10000;
 
   &.active {
